# football-prediction

./: .gitignore
model/: pyproject.toml
model/data/: clubs.json  competitions.json
model/scraper/scraper/: settings.py
model/scraper/scraper/spider_utils/: classes.py
model/scraper/scraper/spiders/: base.py  club.py  competition.py  competitions.py  country.py  fixture.py  injury.py  transfermarkt_spider.py
model/scraper/scraper/spiders/spider_utils/: classes.py
model/scripts/: spider_script.py
