[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Swastik Pandey <swastik.pandey@deerwalk.edu.np>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
