[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Swastik Pandey <swastik.pandey@deerwalk.edu.np>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
scrapy = "^2.11.1"
pymongo = "^4.6.3"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
scrape = "scripts.spider_script:run_spiders"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
